--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,41 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes user_spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+}
+.mt-15 {
+  margin-top: 15px;
+}
+.mr-5 {
+  margin-right: 5px;
+}
+.ml-5 {
+  margin-left: 5px;
+}
+.pr-5 {
+  padding-right: 5px;
+}
+.dropdown-menu .fa:before {
+  padding-right: 10px;
+}
+.text-right {
+  float: right;
+  cursor: pointer;
+}
+.text-right:hover {
+  color: red;
+}
+.sort_selected::after {
+  content: "\f00c";
+  font-family: fontawesome;
+  font-weight: normal;
+  font-style: normal;
+  margin: 0 0 0 10px;
+  display: inline-block;
 }
